# NexusDeploy

./: .gitignore  MANIFEST_SPEC.md  README.md  bootstrap.sh  cli.py  pyproject.toml
core/: docker_mgr.py  engine.py  exceptions.py  logger.py  schema.py  state_mgr.py
gateway/conf.d/: app-a.conf  app-b.conf  dyn-1.conf  dyn-2.conf  dyn-3.conf  test-app.conf
nexus-deploy/: .gitignore  MANIFEST_SPEC.md  bootstrap.sh  cli.py
nexus-deploy/core/: docker_mgr.py  engine.py  schema.py
nexus-deploy/gateway/: docker-compose.yaml  nginx.conf
nexus-deploy/nexus_deploy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nexus-deploy/sample-app/: custom.conf  manifest.yaml
nexus-deploy/templates/: app-compose.j2  nginx-vhost.j2
nexus-deploy/test-app/: custom.conf  manifest.yaml
templates/: app-compose.j2  nginx-vhost.j2
test-app/: custom.conf  docker-compose.yaml  manifest.yaml
